--- a/orbitt-report/src/app/orbitt-list/orbitt-list.component.html
+++ b/orbitt-report/src/app/orbitt-list/orbitt-list.component.html
@@ -1,10 +1,18 @@
-<h3>Orbit Report</h3>
+<h3>Orbitt Report</h3>
+
 <table>
-   <tr class="header-row">
-      <th class="sortable">Name</th>
-      <th class="sortable">Type</th>
-      <th>Operational</th>
-      <th>Orbit Type</th>
-      <th>Launch Date</th>
-   </tr *ngFor=""></tr> 
+    <tr class="header-row">
+        <th class="sortable" (click)="sort('name')">Name</th>
+        <th class="sortable" (click)="sort('type')">Type</th>
+        <th>Operational</th>
+        <th>Orbitt Type</th>
+        <th>Launch Date</th>
+    </tr>
+    <tr *ngFor="let object of satellites">
+        <td> {{ object.name }} </td>
+        <td [class.warning]="object.shouldShowWarning()"> {{ object.type }} </td>
+        <td> {{ object.operational }} </td>
+        <td> {{ object.orbittType }} </td>
+        <td> {{ object.launchDate }} </td>
+    </tr>
 </table>
